--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     }
   </style>
   <!-- <script src="file:///C:/Users/hp/p5/p5.min.js"></script> -->
-  <script src="file:///C:/Users/hp/p5/p5.js"></script>
-  <script src="file:///C:/Users/hp/p5/addons/p5.sound.min.js"></script>
+  <script src="/libraries/p5.js"></script>
+<!--   <script src="file:///C:/Users/hp/p5/addons/p5.sound.min.js"></script> -->
   <script src="sketch.js"></script>
   <script src="gradient.js"></script>
   <script src="seven_seg.js"></script>
