--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
   <!-- <script src="file:///C:/Users/hp/p5/p5.min.js"></script> -->
   <script src="/libraries/p5.js"></script>
-<!--   <script src="file:///C:/Users/hp/p5/addons/p5.sound.min.js"></script> -->
+  <script src="/libraries/addons/p5.sound.min.js"></script>
   <script src="sketch.js"></script>
   <script src="gradient.js"></script>
   <script src="seven_seg.js"></script>
@@ -22,9 +22,11 @@
 </head>
 
 <body>
-  <!-- <h1>Rainbow Gradient Clock!</h1>
+  <h1>Rainbow Gradient Clock!</h1>
   <h2>(Using seven and sixteen segment display)</h2>
-  <p>This is a pretty little clock inspired by Daniel Shiffman's video on seven segment dislplay.</p> -->
+  <p>
+    This is a pretty little clock inspired by Daniel Shiffman's video on seven segment dislplay.
+  </p>
 </body>
 
 </html>
