--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       margin: 0;
     }
   </style>
-  <!-- <script src="file:///C:/Users/hp/p5/p5.min.js"></script> -->
-  <script src="/libraries/p5.js"></script>
-  <script src="/libraries/addons/p5.sound.min.js"></script>
+  
+  <script src="/libraries/p5.min.js"></script>
+<!--   <script src="/libraries/addons/p5.sound.min.js"></script> -->
   <script src="sketch.js"></script>
   <script src="gradient.js"></script>
   <script src="seven_seg.js"></script>
