--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     }
   </style>
   
-  <script src="/libraries/p5.min.js"></script>
-<!--   <script src="/libraries/addons/p5.sound.min.js"></script> -->
-  <script src="sketch.js"></script>
-  <script src="gradient.js"></script>
-  <script src="seven_seg.js"></script>
-  <script src="sixteen_seg.js"></script>
+  <script src="libraries/p5.js"> type="text/javascript"></script>
+  <script src="libraries/addons/p5.sound.min.js"> type="text/javascript"></script>
+  <script src="sketch.js"> type="text/javascript"></script>
+  <script src="gradient.js"> type="text/javascript"></script>
+  <script src="seven_seg.js"> type="text/javascript"></script>
+  <script src="sixteen_seg.js"> type="text/javascript"></script>
 
 </head>
 
