--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Rainbow Clock</title>
   <style>
     body {
-      padding: 2;
-      margin: 5;
+      padding: 40px;
+      margin: 40px;
     }
   </style>
   
