--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <script src="gradient.js"> type="text/javascript"></script>
   <script src="seven_seg.js"> type="text/javascript"></script>
   <script src="sixteen_seg.js"> type="text/javascript"></script>
+  <script src="sliders.js"> type="text/javascript"></script>
+
 
 </head>
 
