--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><font face = 'Comic Sans MS'>Rainbow Clock</font></title>
+  <title><font face = "Comic Sans MS">Rainbow Clock</font></title>
   <style>
     body {
       padding: 0px;
