--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><font face = "Comic Sans MS">Rainbow Clock</font></title>
+  <title>Rainbow Clock</title>
   <style>
     body {
       padding: 0px;
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <h1>Rainbow Gradient Clock!</h1>
+  <h1> <font face = "Monaco"> Rainbow Gradient Clock!</font></h1>
   <h2>(Using seven and sixteen segment display)</h2>
   <p>
     This is a pretty little clock inspired by Daniel Shiffman's video on seven segment dislplay.
