Added px10 font
Hopefully this will change the font to something that matches with the theme of this whole repo. Segments.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       padding: 0px;
       margin: 20px;
     }
+  @font-face{
+      font-family:"px10";
+      src: url("font/px10.ttf")
+    }
+    body{font-family:"px10";}
   </style>
   
   <script src="libraries/p5.js"> type="text/javascript"></script>
