--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 </head>
 
 <body>
-  <h1> <font face = "Monaco"> Rainbow Gradient Clock!</h1>
+  <h1> Rainbow Gradient Clock!</h1>
   <h2>(Using seven and sixteen segment display)</h2>
   <p>
     This is a pretty little clock inspired by Daniel Shiffman's video on seven segment dislplay.
-  </p></font>
+  </p>
   <p> </p>
 </body>
 
