--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 </head>
 
 <body>
-  <h1> Rainbow Gradient Clock!</h1>
+  <h1><font size="+7"> Rainbow Gradient Clock!</h1></font>
   <h2>(Using seven and sixteen segment display)</h2>
   <p>
-    This is a pretty little clock inspired by Daniel Shiffman's video on seven segment dislplay.
+    This is a pretty little clock inspired by Daniel Shiffman's video on seven segment display.
   </p>
   <p> </p>
 </body>
