Trying a background color

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body>
+<body style="background-color:#333333; >
   <h1><font size="+7"> Rainbow Gradient Clock!</h1></font>
   <h2>(Using seven and sixteen segment display)</h2>
   <p>
