--- a/index.html
+++ b/index.html
@@ -25,16 +25,21 @@
   <script src="sixteen_seg.js"> type="text/javascript"></script>
   <script src="sliders.js"> type="text/javascript"></script>
 
+  </head>
 
-</head>
-
-<body style="background-color:#333333; >
-  <h1><font size="+7"> Rainbow Gradient Clock!</h1></font>
-  <h2>(Using seven and sixteen segment display)</h2>
+  <body style="background-color:#333333; color:white;">
+  <h1> 
+  <p style= "font-size:80px;"> Rainbow Gradient Clock!
+  </h1>
+  </p>
+  <h2>
+    (Using seven and sixteen segment display)
+  </h2>
   <p>
     This is a pretty little clock inspired by Daniel Shiffman's video on seven segment display.
   </p>
-  <p> </p>
-</body>
+  <p> 
+  </p>
+  </body>
 
 </html>
