Tried some fancy dashes and break lines
Ivan-Denisovich-py will tally the outputs and set the right pixel width for the fancy dashes, according to the desktop view.

--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
   </head>
 
   <body style="background-color:#333333; color:white;">
-  <h1> 
+  <h1>  
+  <hr color:"white;"  width:"280px;">
   <p style= "font-size:80px;"> Rainbow Gradient Clock!
-  </h1>
   </p>
+  <hr color:"white;"  width:"280px;">
+  </h1>
+  <br>
   <h2>
     (Using seven and sixteen segment display)
   </h2>
+  <br>
   <p>
     This is a pretty little clock inspired by Daniel Shiffman's video on seven segment display.
   </p>
