--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
 
   <body style="background-color:#333333; color:white;">
   <h1>  
+  <p style= "font-size:80px;">
   <hr color:"white;"  width:"280px;">
-  <p style= "font-size:80px;"> Rainbow Gradient Clock!
+   Rainbow Gradient Clock!
+  <hr color:"white;"  width:"280px;">
   </p>
-  <hr color:"white;"  width:"280px;">
   </h1>
   <br>
   <h2>
@@ -44,6 +45,7 @@
   </p>
   <p> 
   </p>
+  <br> <br>
   </body>
 
 </html>
