Did some experimental stuff

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
     body{font-family:"px10";}
   </style>
-  
+
   <script src="libraries/p5.js"> type="text/javascript"></script>
   <script src="libraries/addons/p5.sound.min.js"> type="text/javascript"></script>
   <script src="sketch.js"> type="text/javascript"></script>
@@ -28,24 +28,21 @@
   </head>
 
   <body style="background-color:#333333; color:white;">
-  <h1>  
-  <hr color:"white;"  width:"80px;">
-  <p style= "font-size:80px;">
-   Rainbow Gradient Clock!
-  </p>
-  <hr color:"white;"  width:"80px;">
-  </h1>
-  <br>
-  <h2>
-    (Using seven and sixteen segment display)
-  </h2>
-  <br>
-  <p>
-    This is a pretty little clock inspired by Daniel Shiffman's video on seven segment display.
-  </p>
-  <p> 
-  </p>
-  <br> <br>
+    <h1>
+      <p style= "font-size:50px;">
+          Rainbow Gradient Clock!
+        <hr>
+      </p>
+    </h1>
+    <h2>
+      (Using seven and sixteen segment display)
+    </h2>
+    <br>
+    <p>
+      This is a pretty little clock inspired by Daniel Shiffman's video on seven segment display.
+      You can change the gradient colors by using the sliders. Be creative!
+    </p>
+    <br><br>
   </body>
 
 </html>
