--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       This is a pretty little clock inspired by Daniel Shiffman's video on seven segment display.
       You can change the gradient colors by using the sliders. Be creative!
     </p>
+    <a href="https://github.com/Ivan-Denisovich-py/rainbow-clock/tree">GitHub Repo</a> 
     <br><br>
   </body>
 
