--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
       src: url("font/px10.ttf")
     }
     body{font-family:"px10";}
+   
+      .ui {
+      position: absolute;
+      top: 40px;
+      lefT: 10px;
+      opacity: 0.8;
+      padding: 5px;
+    }
+  
   </style>
 
   <script src="libraries/p5.js"> type="text/javascript"></script>
@@ -42,7 +51,9 @@
       This is a pretty little clock inspired by Daniel Shiffman's video on seven segment display.
       You can change the gradient colors by using the sliders. Be creative!
     </p>
-    <a href="https://github.com/Ivan-Denisovich-py/rainbow-clock/tree">GitHub Repo</a> 
+     <div class="ui">
+    <a href="https://github.com/Ivan-Denisovich-py/rainbow-clock">GitHub Repo</a> 
+    </div>
     <br><br>
   </body>
 
