--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
       src: url("font/px10.ttf")
     }
     body{font-family:"px10";}
-   
+     
       .ui {
       position: absolute;
       top: 40px;
       lefT: 10px;
       opacity: 0.8;
       padding: 5px;
+    }
+   
+    a {
+      position: absolute;
+      top: -30px;
+      right: -300px;
+      color: white;
+      font-size: 12px;
     }
   
   </style>
