--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     a {
       position: absolute;
       top: -30px;
-      right: -300px;
+      right: -800px;
       color: white;
       font-size: 12px;
     }
@@ -46,9 +46,11 @@
 
   <body style="background-color:#333333; color:white;">
     <h1>
-      <p style= "font-size:50px;">
+        <hr style="width:50%;text-align:left;margin-left:0">
+        <p style= "font-size:50px;">
           Rainbow Gradient Clock!
-        <hr>
+        <hr style="width:50%;text-align:left;margin-left:0">
+
       </p>
     </h1>
     <h2>
