--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       .myDiv {
       text-align: left;
       position: absolute;
-      top: 1300px;
+      top: 2000px;
       lefT: 30px;
      
     
@@ -52,7 +52,7 @@
 
   </head>
 
-  <body style="background-color:#333333; color:white;">
+  <body style="background-color:#333333; color:white;font-size: 40px;">
     <h1>
       <!-- <hr style="width:50%;text-align:left;margin-left:0"> -->
         <p style= "font-size:50px;">
