--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </style>
 
   <script src="libraries/p5.js"> type="text/javascript"></script>
-  <script src="libraries/addons/p5.sound.min.js"> type="text/javascript"></script>
+<!--   <script src="libraries/addons/p5.sound.min.js"> type="text/javascript"></script> -->
   <script src="sketch.js"> type="text/javascript"></script>
   <script src="gradient.js"> type="text/javascript"></script>
   <script src="seven_seg.js"> type="text/javascript"></script>
