Final edits to index.html (finally)
I hope it really is final. TT.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
   </style>
 
   <script src="libraries/p5.min.js"> type="text/javascript"></script>
-<!--   <script src="libraries/addons/p5.sound.min.js"> type="text/javascript"></script> -->
   <script src="sketch.js"> type="text/javascript"></script>
   <script src="gradient.js"> type="text/javascript"></script>
   <script src="seven_seg.js"> type="text/javascript"></script>
@@ -53,7 +52,6 @@
 
   <body style="background-color:#333333; color:white;font-size: 20px;">
     <h1>
-      <!-- <hr style="width:50%;text-align:left;margin-left:0"> -->
         <p style= "font-size:50px;">
           Rainbow Gradient Clock!
       </p>
@@ -61,12 +59,12 @@
 
     </h1>
     <h2>
-      (Using seven and sixteen segment display)
+      Contribution To Coding Challenge #117
     </h2>
     <!-- <br> -->
     <p>
-      This is a pretty little clock inspired by Daniel Shiffman's video on seven segment display.
-      You can change the gradient colors by using the sliders. Be creative!
+      This is a pretty little clock inspired of Daniel Shiffman's video on seven segment display.
+      You can change the gradient and the clock and calendar colours by using the sliders. Be creative and have fun!
     </p>
      <div class="ui">
     <a href="https://github.com/Ivan-Denisovich-py/rainbow-clock">Source-code</a> 
@@ -75,7 +73,15 @@
 
     <div class="myDiv">
     <h2>Seven and Sixteen Segment Displays </h2>
-    <p> We'll keep adding all the text and links here.  </p>
+    <p>Links to know in details about these:
+       •[Seven Segment Display](https://g.co/kgs/224wjj)
+       •[Sixteen Segment Display](https://g.co/kgs/Xs5HH3)
+    </p>
+    <p>
+     We hope you liked it!
+    </p>
+    
+    
     </div>
 
 
