--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <div class="myDiv">
     <h2>Seven and Sixteen Segment Displays </h2>
     <p>Links to know in details about these:
-       •[Seven Segment Display](https://g.co/kgs/224wjj)
-       •[Sixteen Segment Display](https://g.co/kgs/Xs5HH3)
+       •<a href="<a href="https://g.co/kgs/224wjj">Seven Segment Display</a> <br>
+       •<a href="https://g.co/kgs/Xs5HH3">Sixteen Segment Display</a>
     </p>
     <p>
      We hope you liked it!
