--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <div class="myDiv">
     <h2>Seven and Sixteen Segment Displays </h2>
     <p>Links to know in details about these:
-       •<a href="href="https://en.m.wikipedia.org/wiki/Seven-segment_display"Seven Segment Display</a> <br>
-       •<a href="https://en.m.wikipedia.org/wiki/Sixteen-segment_display"Sixteen Segment Display</a>
+       •<a href="href="https://en.m.wikipedia.org/wiki/Seven-segment_display">Seven Segment Display</a> <br>
+       •<a href="https://en.m.wikipedia.org/wiki/Sixteen-segment_display">Sixteen Segment Display</a>
     </p>
     <p>
      We hope you liked it!
