--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
       .myDiv {
       text-align: left;
+      position: absolute;
       top: 1140px;
       lefT: 30px;
 
@@ -73,7 +74,7 @@
     <div class="myDiv">
     <h2>Seven and Sixteen Segment Displays </h2>
     <p>Links to know in details about these:
-       •<a href="href="https://en.m.wikipedia.org/wiki/Seven-segment_display">Seven Segment Display</a> <br>
+       •<a href="https://en.m.wikipedia.org/wiki/Seven-segment_display">Seven Segment Display</a> <br>
        •<a href="https://en.m.wikipedia.org/wiki/Sixteen-segment_display">Sixteen Segment Display</a>
     </p>
     <p>
