The problem remains

--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
     <div class="myDiv">
     <h2>Seven and Sixteen Segment Displays </h2>
     <p>Links to know in details about these:
-       •<a href="https://en.m.wikipedia.org/wiki/Seven-segment_display">Seven Segment Display</a> <br>
-       •<a href="https://en.m.wikipedia.org/wiki/Sixteen-segment_display">Sixteen Segment Display</a>
-    </p>
+       <ul> <li><a href="https://en.m.wikipedia.org/wiki/Seven-segment_display">Seven Segment Display</a> 
+       </li>
+       <li><a href="https://en.m.wikipedia.org/wiki/Sixteen-segment_display">Sixteen Segment Display</a>
+    </li>
+    </ul>
     <p>
      We hope you liked it!
     </p>
