--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     <div class="myDiv">
     <h2>Seven and Sixteen Segment Displays </h2>
     <p>Links to know in details about these:
-       <ul> <li><a href="https://en.m.wikipedia.org/wiki/Seven-segment_display">Seven Segment Display</a> 
+       <ul> <li><a class="myDiv" href="https://en.m.wikipedia.org/wiki/Seven-segment_display">Seven Segment Display</a> 
        </li>
-       <li><a href="https://en.m.wikipedia.org/wiki/Sixteen-segment_display">Sixteen Segment Display</a>
+       <li><a class="myDiv" href="https://en.m.wikipedia.org/wiki/Sixteen-segment_display">Sixteen Segment Display</a>
     </li>
     </ul>
     <p>
