--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 
       .myDiv {
       text-align: left;
-      position: absolute;
-      top: 1130px;
+      position: relative;
+      top: 1140px;
       lefT: 30px;
     }
       .srcCode {
+        text-align: right;
         position: absolute;
-        top: -30px;
-        right: -1300px;
-        font-size: 25px;
-      }
+        top: 10px;
+        right: 30px;
+  }
 
 
   </style>
