Don't ask why I did it
Why didn't I notice it before. TT.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </h2>
 
     <p>
-      This is a pretty little clock inspired of Daniel Shiffman's video on seven segment display.
+      This is a pretty little clock inspired by Daniel Shiffman's video on seven segment display.
       You can change the gradient and the clock and calendar colours by using the sliders. Be creative and have fun!
     </p>
     
